package com.irina.myfirstgame.objects;

/**
 * Timer simple pour mesurer le temps écoulé.
 * <p>
 * Stub pour une fonctionnalité future de gestion du temps.
 * </p>
 *
 * @author Irina
 * @version 1.0
 * @since 1.0
 */
public class Timer {
    private float startTime;
    private float duration;
    private boolean running;
    private boolean finished;
    
    public void start(float duration) {
    }
    
    public void stop() {
    }
    
    public void restart() {
    }
    
    public void tick(float delta) {
    }
    
    public float elapsed() {
        return 0;
    }
    
    public float getElapsedTime() {
        return 0;
    }
    
    public boolean isExpired() {
        return false;
    }
}

